--- a/pages/soh6/451579.md
+++ b/pages/soh6/451579.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="美國總統川普12月7日在白宮接受記者詢問（AP/美聯社）" src="https://img.soundofhope.org/2020-12/9888-1607445903779.jpeg"/>
+<div><img alt="美国总统川普12月7日在白宫接受记者询问（AP/美联社）" src="https://img.soundofhope.org/2020-12/9888-1607445903779.jpeg"/>
 <br/><figcaption class="caption">
- 美國總統川普12月7日在白宮接受記者詢問（AP/美聯社）
+ 美国总统川普12月7日在白宫接受记者询问（AP/美联社）
 </figcaption></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -17,27 +17,27 @@
 <div><div class="Content__Wrapper sc-1bvya0-0 grZQxZ">
  <p class="meta-top">
   <span class="meta">
-   【希望之聲2020年12月8日】（本台記者凌杉綜合報導）
+   【希望之声2020年12月8日】（本台记者凌杉综合报导）
   </span>
-  當地時間12月8日（週二），川普團隊發佈聲明表示，12月8日的“安全港期限”是正常情況下各州認證選舉結果的最後一天。但是，選舉爭議要持續到12月8日之後並不是前所未有的。聲明指出，對選舉爭議有重要意義的下一個日期是1月6日。
+  当地时间12月8日（周二），川普团队发布声明表示，12月8日的“安全港期限”是正常情况下各州认证选举结果的最后一天。但是，选举争议要持续到12月8日之后并不是前所未有的。声明指出，对选举争议有重要意义的下一个日期是1月6日。
  </p>
  <p>
-  同日，美國
-  <ok href="/term/1636?lang=b5">
+  同日，美国
+  <ok href="/term/1636">
    德州
   </ok>
-  向最高法院提交訴狀，起訴賓夕法尼亞州、喬治亞州、密歇根州和威斯康星州的選舉過程違反憲法。週二下午，美最高法院要求四
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  向最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法。周二下午，美最高法院要求四
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  提交對訴訟的答覆。
+  提交对诉讼的答复。
  </p>
  <p>
-  川普高級法律顧問埃利斯（Jenna Ellis）在推文中引用
-  <ok href="/term/1636?lang=b5">
+  川普高级法律顾问埃利斯（Jenna Ellis）在推文中引用
+  <ok href="/term/1636">
    德州
   </ok>
-  訴狀說，“我們的國家處於重要的十字路口。憲法和必須遵守憲法的規則都很重要，即使有些官員認爲憲法不便或過時，或者只是展示中的一塊羊皮紙……我們請最高法院選擇憲法。 ”
+  诉状说，“我们的国家处于重要的十字路口。宪法和必须遵守宪法的规则都很重要，即使有些官员认为宪法不便或过时，或者只是展示中的一块羊皮纸……我们请最高法院选择宪法。 ”
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -48,31 +48,31 @@
   </div>
  </div>
  <p>
-  以下是希望之聲爲您整合的12月8日即時更新新聞：
+  以下是希望之声为您整合的12月8日即时更新新闻：
  </p>
  <h2>
   美最高法院要求四
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  提交對訴訟的答覆
+  提交对诉讼的答复
  </h2>
  <p>
-  週二下午，美國最高法院要求賓夕法尼亞州、喬治亞州、密歇根州和威斯康星州提交對訴訟的答覆。截止日期在12月10日（週四）的下午3點前。
+  周二下午，美国最高法院要求宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州提交对诉讼的答复。截止日期在12月10日（周四）的下午3点前。
  </p>
  <p>
-  美國德克薩斯州向聯邦最高法院提交訴狀，起訴賓夕法尼亞州、喬治亞州、密歇根州和威斯康星州的選舉過程違反憲法，這是自11月3日選舉日以來，首個直接向聯邦最高法院提交的訴狀。訴狀原文見
+  美国德克萨斯州向联邦最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法，这是自11月3日选举日以来，首个直接向联邦最高法院提交的诉状。诉状原文见
   <ok href="https://www.texasattorneygeneral.gov/sites/default/files/images/admin/2020/Press/SCOTUSFiling.pdf">
-   此處
+   此处
   </ok>
-  。原告的主要論點集中在四個州的選舉法律、規則和程序的制定上，並表示違反了憲法，剝奪了州立法機關的權力。
+  。原告的主要论点集中在四个州的选举法律、规则和程序的制定上，并表示违反了宪法，剥夺了州立法机关的权力。
  </p>
  <p>
-  該訴訟要求法院裁定，四個
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  该诉讼要求法院裁定，四个
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  的選舉結果違反憲法，並要求禁止計算這四個州的選舉團票數。
+  的选举结果违反宪法，并要求禁止计算这四个州的选举团票数。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -83,18 +83,18 @@
   </div>
  </div>
  <p>
-  就相關訴訟，路易斯安那州總檢察長傑夫·蘭德里發表聲明說：數以百萬的路易斯安那州居民關注本次大選出現的爭議，他呼籲美國最高法院應考慮德克薩斯州最近的動議，以叫停4個
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  就相关诉讼，路易斯安那州总检察长杰夫·兰德里发表声明说：数以百万的路易斯安那州居民关注本次大选出现的争议，他呼吁美国最高法院应考虑德克萨斯州最近的动议，以叫停4个
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  有爭議的選舉結果。
+  有争议的选举结果。
  </p>
  <p>
-  對於相關訴訟，阿拉巴馬州總檢察長髮布聲明，宣佈該州支持
-  <ok href="/term/1636?lang=b5">
+  对于相关诉讼，阿拉巴马州总检察长发布声明，宣布该州支持
+  <ok href="/term/1636">
    德州
   </ok>
-  的訴訟。
+  的诉讼。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -105,13 +105,13 @@
   </div>
  </div>
  <h2>
-  美聯邦高院駁回川普陣營訴賓州加急審理 案件仍保留
+  美联邦高院驳回川普阵营诉宾州加急审理 案件仍保留
  </h2>
  <p>
-  週二，美國最高法院拒絕了共和黨人衆議員邁克·凱利（Mike Kelly）提出的訴訟案加急審理要求，當局並沒有提供駁回的原因。
+  周二，美国最高法院拒绝了共和党人众议员迈克·凯利（Mike Kelly）提出的诉讼案加急审理要求，当局并没有提供驳回的原因。
  </p>
  <p>
-  川普團隊要員珍娜·埃利斯表示，目前流傳的高院拒絕賓州申請的消息是不實的，相關決策僅推翻了緊急審理。原本的訴訟案仍在美國最高法院處於待處理狀態。
+  川普团队要员珍娜·埃利斯表示，目前流传的高院拒绝宾州申请的消息是不实的，相关决策仅推翻了紧急审理。原本的诉讼案仍在美国最高法院处于待处理状态。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -122,33 +122,33 @@
   </div>
  </div>
  <h2>
-  美聯邦高院接收
-  <ok href="/term/1636?lang=b5">
+  美联邦高院接收
+  <ok href="/term/1636">
    德州
   </ok>
-  訴4
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  诉4
+  <ok href="/term/14588">
+   摇摆州
   </ok>
   案
  </h2>
  <p>
-  美國德克薩斯州向聯邦最高法院提交訴狀，起訴賓夕法尼亞州、喬治亞州、密歇根州和威斯康星州的選舉過程違反憲法，這是自11月3日選舉日以來，首個直接向聯邦最高法院提交的訴狀。週二，美國最高法院網站顯示，院方已經收到
-  <ok href="/term/1636?lang=b5">
+  美国德克萨斯州向联邦最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法，这是自11月3日选举日以来，首个直接向联邦最高法院提交的诉状。周二，美国最高法院网站显示，院方已经收到
+  <ok href="/term/1636">
    德州
   </ok>
-  的相關訴狀，並建立卷宗編號。
+  的相关诉状，并建立卷宗编号。
  </p>
  <p>
-  根據公開資訊，目前
-  <ok href="/term/1636?lang=b5">
+  根据公开资讯，目前
+  <ok href="/term/1636">
    德州
   </ok>
-  訴4
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  诉4
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  案的情況爲“Docketed”，獲得了案件卷宗編號，並處於待響應案件等候清單中。
+  案的情况为“Docketed”，获得了案件卷宗编号，并处于待响应案件等候清单中。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -159,19 +159,19 @@
   </div>
  </div>
  <h2>
-  川普團隊聲明：選舉爭議持續到12月8日後並非前所未有
+  川普团队声明：选举争议持续到12月8日后并非前所未有
  </h2>
  <p>
-  週二，川普私人律師魯迪·朱利安尼（Rudy Giuliani）和高級法律顧問兼總統律師珍娜·埃利斯發佈聲明說：
+  周二，川普私人律师鲁迪·朱利安尼（Rudy Giuliani）和高级法律顾问兼总统律师珍娜·埃利斯发布声明说：
  </p>
  <p>
-  “12月8日的‘安全港期限’按照法定意義通常表示各州認證選舉結果的最後一天。但是，選舉競賽要持續到12月8日之後並不是前所未有的。”
+  “12月8日的‘安全港期限’按照法定意义通常表示各州认证选举结果的最后一天。但是，选举竞赛要持续到12月8日之后并不是前所未有的。”
  </p>
  <p>
-  “大法官金斯伯格（Justice Ginsburg）在布什訴戈爾（Bush vs Gore）案中承認，‘決定性意義’的日期是1月6日，當日國會計算並證明選舉團的選票。美國憲法中唯一固定的日期是總統於1月20日中午就職。”
+  “大法官金斯伯格（Justice Ginsburg）在布什诉戈尔（Bush vs Gore）案中承认，‘决定性意义’的日期是1月6日，当日国会计算并证明选举团的选票。美国宪法中唯一固定的日期是总统于1月20日中午就职。”
  </p>
  <p>
-  “儘管媒體拼命地宣佈這場爭端已經結束，但我們將繼續捍衛選舉的完整性，直到公平、準確地計算合法投票爲止”，川普團隊聲明說。
+  “尽管媒体拼命地宣布这场争端已经结束，但我们将继续捍卫选举的完整性，直到公平、准确地计算合法投票为止”，川普团队声明说。
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -182,82 +182,82 @@
   </div>
  </div>
  <h2>
-  前州務卿：德克薩斯訴4
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  前州务卿：德克萨斯诉4
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  案發起迄今最大法律挑戰
+  案发起迄今最大法律挑战
  </h2>
  <p>
-  前堪薩斯州務卿、移民法與選舉欺詐研究專家科巴赫（Kris W. Kobach）表示，
-  <ok href="/term/1636?lang=b5">
+  前堪萨斯州务卿、移民法与选举欺诈研究专家科巴赫（Kris W. Kobach）表示，
+  <ok href="/term/1636">
    德州
   </ok>
-  在聯邦高院訴四
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  在联邦高院诉四
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  案是迄今以來提起的最重要訴訟案，這一做法涉及憲法列出的少數幾類最高法院具有“原始管轄權”的案件。其中一個類別涉及“兩個或多個州之間的爭議”。
+  案是迄今以来提起的最重要诉讼案，这一做法涉及宪法列出的少数几类最高法院具有“原始管辖权”的案件。其中一个类别涉及“两个或多个州之间的争议”。
  </p>
  <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
   <div>
   </div>
  </div>
  <p>
-  科巴赫說，德克薩斯州的訴訟很明顯，這是一個令人信服的案例。四個被告州分別以兩種方式違反了美國憲法。首先，他們違反了《憲法》第二條的選舉人條款，因爲各州的行政官員或司法官員未經州議會通過就更改了選舉規則。 其次，四個州中的每個縣更改其接收、評估或處理選票的方式違反憲法第十四修正案的平等保護條款，選民具有憲法上的權利，各郡的選票需要得到平等對待。
+  科巴赫说，德克萨斯州的诉讼很明显，这是一个令人信服的案例。四个被告州分别以两种方式违反了美国宪法。首先，他们违反了《宪法》第二条的选举人条款，因为各州的行政官员或司法官员未经州议会通过就更改了选举规则。 其次，四个州中的每个县更改其接收、评估或处理选票的方式违反宪法第十四修正案的平等保护条款，选民具有宪法上的权利，各郡的选票需要得到平等对待。
  </p>
  <p>
-  他認爲，德克薩斯州的訴訟提出了一個純粹的法律問題。它不取決於有爭議的事實，甚至並不需要證明任何一個欺詐案例就可以勝訴。四個州違反憲法的問題足以導致他們的選舉違規。
- </p>
- <h2>
-  亞利桑那最高法院受理川普陣營訴狀
- </h2>
- <p>
-  <ok href="/term/14588?lang=b5">
-   搖擺州
-  </ok>
-  亞利桑那的最高法院本週聽取該州共和黨主席凱利·沃德（Kelli Ward）提出的，關於在馬里科帕縣（Maricopa County）郵寄選票的挑​​戰。
- </p>
- <p>
-  下級法院法官於上週五（12月4日）駁回了相關案件，但沃德隨後向該州最高法院提交了訴狀。
- </p>
- <p>
-  亞利桑那州最高法院由州長任命的七名法官組成，人選來自兩黨委員會的提名人名單。當前的兩名法官由前共和黨州長揚·布魯爾任命，另外五名由現任共和黨州長道格·杜西任命。
+  他认为，德克萨斯州的诉讼提出了一个纯粹的法律问题。它不取决于有争议的事实，甚至并不需要证明任何一个欺诈案例就可以胜诉。四个州违反宪法的问题足以导致他们的选举违规。
  </p>
  <h2>
-  抗議拜登陣營舞弊行爲 美國議員提出“您必須活着投票法案”
+  亚利桑那最高法院受理川普阵营诉状
  </h2>
  <p>
-  爲抗議
-  <ok href="/term/13015?lang=b5">
-   選舉舞弊
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  行爲，
-  <ok href="/term/1636?lang=b5">
+  亚利桑那的最高法院本周听取该州共和党主席凯利·沃德（Kelli Ward）提出的，关于在马里科帕县（Maricopa County）邮寄选票的挑​​战。
+ </p>
+ <p>
+  下级法院法官于上周五（12月4日）驳回了相关案件，但沃德随后向该州最高法院提交了诉状。
+ </p>
+ <p>
+  亚利桑那州最高法院由州长任命的七名法官组成，人选来自两党委员会的提名人名单。当前的两名法官由前共和党州长扬·布鲁尔任命，另外五名由现任共和党州长道格·杜西任命。
+ </p>
+ <h2>
+  抗议拜登阵营舞弊行为 美国议员提出“您必须活着投票法案”
+ </h2>
+ <p>
+  为抗议
+  <ok href="/term/13015">
+   选举舞弊
+  </ok>
+  行为，
+  <ok href="/term/1636">
    德州
   </ok>
-  衆議員巴賓（Brian Babin）近日在國會提出了一項法案，該法案要求各州向社會保障局覈實註冊選民是否還活着。該法案被巴賓稱爲“您必須活着投票法案。”
+  众议员巴宾（Brian Babin）近日在国会提出了一项法案，该法案要求各州向社会保障局核实注册选民是否还活着。该法案被巴宾称为“您必须活着投票法案。”
  </p>
  <p>
-  “選舉權是我們民主最重要的支柱之一，其基礎是選舉的完整性和對我們民主進程的信心”，巴賓說。
+  “选举权是我们民主最重要的支柱之一，其基础是选举的完整性和对我们民主进程的信心”，巴宾说。
  </p>
  <p>
-  巴賓告訴美媒OAN，“任何輕易地竊取已故者的選票並進行非法投票的做法，無論他們身處兩黨的哪一邊，都會驚嚇和激怒每一個美國公民。爲了保護我們的民主進程和美國人的信心，我們必須確保死者不得繼續擔任州選民。”
+  巴宾告诉美媒OAN，“任何轻易地窃取已故者的选票并进行非法投票的做法，无论他们身处两党的哪一边，都会惊吓和激怒每一个美国公民。为了保护我们的民主进程和美国人的信心，我们必须确保死者不得继续担任州选民。”
  </p>
  <p>
-  他繼續說：“您會認爲這樣的議案是不必要的。不用說您應該活着就可以投票”，“很悲傷的是，我們必須公開介紹事實，我們仍然有很多問題，一半以上的美國人認爲我們的選舉並不公開透明。”
+  他继续说：“您会认为这样的议案是不必要的。不用说您应该活着就可以投票”，“很悲伤的是，我们必须公开介绍事实，我们仍然有很多问题，一半以上的美国人认为我们的选举并不公开透明。”
  </p>
  <h2>
-  賓州政府按要求提交聯邦高院文件 稱“不要打開門”
+  宾州政府按要求提交联邦高院文件 称“不要打开门”
  </h2>
  <p>
-  賓夕法尼亞州政府在規定期限前向最高法院提交了案情摘要，在此之前，川普陣營就賓州郵寄選票違規問題向聯邦法院提起訴訟。美網友轉發相關文本推文說，“他們敦促法院不要打開潘多拉盒子，即使自己違反了美國憲法的聯邦法律。”
+  宾夕法尼亚州政府在规定期限前向最高法院提交了案情摘要，在此之前，川普阵营就宾州邮寄选票违规问题向联邦法院提起诉讼。美网友转发相关文本推文说，“他们敦促法院不要打开潘多拉盒子，即使自己违反了美国宪法的联邦法律。”
  </p>
  <p>
-  根據公開的文本，賓州政府對聯邦高院說“當總統選舉司法無效問題的大門一打開，關上它將會是極端困難的......公衆對司法權力信任的損失將是無法計量的。”
+  根据公开的文本，宾州政府对联邦高院说“当总统选举司法无效问题的大门一打开，关上它将会是极端困难的......公众对司法权力信任的损失将是无法计量的。”
  </p>
  <p>
-  對此，有美國網民評論說，“最好把它打開。我的權利已經受到侵犯”，“很顯然他們想掩蓋一些大問題！”，“當你欺騙了7400萬人時，你已經打開了潘多拉盒子，愛國者們會關閉它。”
+  对此，有美国网民评论说，“最好把它打开。我的权利已经受到侵犯”，“很显然他们想掩盖一些大问题！”，“当你欺骗了7400万人时，你已经打开了潘多拉盒子，爱国者们会关闭它。”
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -268,56 +268,56 @@
   </div>
  </div>
  <h2>
-  <ok href="/term/1636?lang=b5">
+  <ok href="/term/1636">
    德州
   </ok>
-  起訴四
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  起诉四
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  選舉流程違憲
+  选举流程违宪
  </h2>
  <p>
-  美國德克薩斯州向聯邦最高法院提交訴狀，起訴賓夕法尼亞州、喬治亞州、密歇根州和威斯康星州的選舉過程違反憲法，這是自11月3日選舉日以來，首個直接向聯邦最高法院提交的訴狀。訴狀原文見
+  美国德克萨斯州向联邦最高法院提交诉状，起诉宾夕法尼亚州、乔治亚州、密歇根州和威斯康星州的选举过程违反宪法，这是自11月3日选举日以来，首个直接向联邦最高法院提交的诉状。诉状原文见
   <ok href="https://www.texasattorneygeneral.gov/sites/default/files/images/admin/2020/Press/SCOTUSFiling.pdf">
-   此處
+   此处
   </ok>
   。
  </p>
  <p>
-  該訴訟要求法院裁定，四個
-  <ok href="/term/14588?lang=b5">
-   搖擺州
+  该诉讼要求法院裁定，四个
+  <ok href="/term/14588">
+   摇摆州
   </ok>
-  的選舉結果違反憲法，並尋求高院裁決禁止計算這四個州的選舉團票數。
+  的选举结果违反宪法，并寻求高院裁决禁止计算这四个州的选举团票数。
  </p>
  <p>
-  原告的主要論點集中在四個州的選舉法律、規則和程序的制定上，並表示違反了憲法，剝奪了州立法機關的權力。
+  原告的主要论点集中在四个州的选举法律、规则和程序的制定上，并表示违反了宪法，剥夺了州立法机关的权力。
  </p>
  <figure class="OImage__StyledFigure-sc-1lfley0-0 hHSfVg">
-  <img alt="德州聯邦高院訴狀截圖" src="https://img.soundofhope.org/2020-12/eourkumuyaagjab-1607446445472.jpg"/>
+  <img alt="德州联邦高院诉状截图" src="https://img.soundofhope.org/2020-12/eourkumuyaagjab-1607446445472.jpg"/>
   <br/><figcaption>
-   德州聯邦高院訴狀截圖
+   德州联邦高院诉状截图
   </figcaption>
  </figure>
  <p>
-  相關文章：
+  相关文章：
  </p>
  <p>
   <ok href="https://www.soundofhope.org/post/451246">
-   【選情更新12/7】川普誓言徹底修復美國選舉系統
+   【选情更新12/7】川普誓言彻底修复美国选举系统
   </ok>
  </p>
  <p>
   <ok href="https://www.soundofhope.org/post/450913">
-   【選情更新12/6】朱利安尼確診中共病毒
+   【选情更新12/6】朱利安尼确诊中共病毒
   </ok>
  </p>
  <p class="meta-btm">
-  責任編輯：張莉莉
+  责任编辑：张莉莉
  </p>
  <p class="meta-btm">
-  本文章或節目經希望之聲編輯製作，轉載請註明希望之聲幷包含原文標題及鏈接。
+  本文章或节目经希望之声编辑制作，转载请注明希望之声并包含原文标题及链接。
  </p>
 </div>
 </div>
