--- a/pages/nsc412/n12606261.md
+++ b/pages/nsc412/n12606261.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.9】国会委员会否认拜登当选" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-4.jpg"/>
+<div><img alt="【大选更新12.9】川普：我们将记住“勇气”一词" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1290143452-600x400.jpg"/>
 <div class="caption">
- 示意图，图为美国国会大厦。（李莎／大纪元）
+ 图为2020年12月8日，川普总统在“神速行动”（Operation Warp Speed）疫苗会议发表讲话。(Tasos Katopodis/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
