--- a/pages/nf4514/n12615033.md
+++ b/pages/nf4514/n12615033.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月12日讯】（大纪元记者陈霆、李言综合报导）美东时间周五（11日）晚间，德州起诉四
+ 【大纪元2020年12月12日讯】（大纪元记者陈霆综合报导）美东时间周五（11日）晚间，德州起诉四
  <ok href="https://www.epochtimes.com/gb/tag/%E6%91%87%E6%91%86%E5%B7%9E.html">
   摇摆州
  </ok>
@@ -52,24 +52,6 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
-<h3>
- 【直播预告】12月12日华府大型游行集会
-</h3>
-<p>
- 随着美国大选舞弊证据的不断曝光，越来越多的美国民众认清这场选举背后关乎美国根基的正邪大战。发起11月14日华盛顿DC大游行的“女性支持美国优先”等组织，计划于本周六（12月12日）再次在美国首府华盛顿举行一系列大型游行演讲活动，表达对大选舞弊的抗议及对川普（特朗普）总统的支持，以保卫美国的宪法及选举制度。主要大型活动包括：
-</p>
-<p>
- 1.“让教会怒吼！”（Let The Church ROAR！）全国祷告大会
- <br/>
- 2.“游行支持川普”（March For Trump）
- <br/>
- 3. 百万人MAGA游行（Million MAGA March）
-</p>
-<p>
- <ok href="https://www.ntdtv.com/b5/2020/12/09/a103006042.html" rel="noopener noreferrer" target="_blank">
-  详情请阅全文。
- </ok>
-</p>
 <h3>
  川普批最高院无智无勇 吁民众要求州议员为大选诚信而战
 </h3>
