--- a/pages/nf4514/n12615033.md
+++ b/pages/nf4514/n12615033.md
@@ -108,7 +108,7 @@
 </blockquote>
 <p>
  <p>
-  川普总统之后乘坐“海军陆战队一号”（Marine One）直升机在集会上空俯视支持者们。
+  之后，川普总统乘坐“海军陆战队一号”（Marine One）直升机多次在集会上空环绕，俯视支持者们。
  </p>
  <h3>
   亚利桑那共和党主席：将向最高法院提交选举诚信案
